// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component -> Cube should render the Cube in completed state without throwing an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="styles__Container-sc-1pwogyu-0 fkagAV"
      >
        <div
          class="styles__Polygon-sc-1pwogyu-1 dCIqjj"
        >
          <div
            class="styles__Side-sc-1pwogyu-2 styles__Front-sc-1pwogyu-8 deBIOm"
          >
            <div
              class="styles__Tracer-sc-18vfsm6-0 hNwUQp"
              direction="left"
            />
          </div>
          <div
            class="styles__Side-sc-1pwogyu-2 styles__Back-sc-1pwogyu-3 gCcrQb"
          >
            <div
              class="styles__Tracer-sc-18vfsm6-0 lKbcB"
            />
          </div>
          <div
            class="styles__Side-sc-1pwogyu-2 styles__Top-sc-1pwogyu-6 eLxrDv"
          />
          <div
            class="styles__Side-sc-1pwogyu-2 styles__Bottom-sc-1pwogyu-7 cpagcj"
          >
            <div
              class="styles__Tracer-sc-18vfsm6-0 lKbcB"
            />
          </div>
          <div
            class="styles__Side-sc-1pwogyu-2 styles__Left-sc-1pwogyu-5 iDSTJS"
          >
            <div
              class="styles__Tracer-sc-18vfsm6-0 hNwUQp"
              direction="left"
            />
          </div>
          <div
            class="styles__Side-sc-1pwogyu-2 styles__Right-sc-1pwogyu-4 fTRfub"
          >
            <div
              class="styles__Tracer-sc-18vfsm6-0 lKbcB"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="styles__Container-sc-1pwogyu-0 fkagAV"
    >
      <div
        class="styles__Polygon-sc-1pwogyu-1 dCIqjj"
      >
        <div
          class="styles__Side-sc-1pwogyu-2 styles__Front-sc-1pwogyu-8 deBIOm"
        >
          <div
            class="styles__Tracer-sc-18vfsm6-0 hNwUQp"
            direction="left"
          />
        </div>
        <div
          class="styles__Side-sc-1pwogyu-2 styles__Back-sc-1pwogyu-3 gCcrQb"
        >
          <div
            class="styles__Tracer-sc-18vfsm6-0 lKbcB"
          />
        </div>
        <div
          class="styles__Side-sc-1pwogyu-2 styles__Top-sc-1pwogyu-6 eLxrDv"
        />
        <div
          class="styles__Side-sc-1pwogyu-2 styles__Bottom-sc-1pwogyu-7 cpagcj"
        >
          <div
            class="styles__Tracer-sc-18vfsm6-0 lKbcB"
          />
        </div>
        <div
          class="styles__Side-sc-1pwogyu-2 styles__Left-sc-1pwogyu-5 iDSTJS"
        >
          <div
            class="styles__Tracer-sc-18vfsm6-0 hNwUQp"
            direction="left"
          />
        </div>
        <div
          class="styles__Side-sc-1pwogyu-2 styles__Right-sc-1pwogyu-4 fTRfub"
        >
          <div
            class="styles__Tracer-sc-18vfsm6-0 lKbcB"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Component -> Cube should render the Cube in loading state without throwing an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="styles__Container-sc-1pwogyu-0 irMsJv"
      >
        <div
          class="styles__Polygon-sc-1pwogyu-1 dCIqjj"
        >
          <div
            class="styles__Side-sc-1pwogyu-2 styles__Front-sc-1pwogyu-8 deBIOm"
          >
            <div
              class="styles__Tracer-sc-18vfsm6-0 hNwUQp"
              direction="left"
            />
          </div>
          <div
            class="styles__Side-sc-1pwogyu-2 styles__Back-sc-1pwogyu-3 gCcrQb"
          >
            <div
              class="styles__Tracer-sc-18vfsm6-0 lKbcB"
            />
          </div>
          <div
            class="styles__Side-sc-1pwogyu-2 styles__Top-sc-1pwogyu-6 eLxrDv"
          />
          <div
            class="styles__Side-sc-1pwogyu-2 styles__Bottom-sc-1pwogyu-7 cpagcj"
          >
            <div
              class="styles__Tracer-sc-18vfsm6-0 lKbcB"
            />
          </div>
          <div
            class="styles__Side-sc-1pwogyu-2 styles__Left-sc-1pwogyu-5 iDSTJS"
          >
            <div
              class="styles__Tracer-sc-18vfsm6-0 hNwUQp"
              direction="left"
            />
          </div>
          <div
            class="styles__Side-sc-1pwogyu-2 styles__Right-sc-1pwogyu-4 fTRfub"
          >
            <div
              class="styles__Tracer-sc-18vfsm6-0 lKbcB"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="styles__Container-sc-1pwogyu-0 irMsJv"
    >
      <div
        class="styles__Polygon-sc-1pwogyu-1 dCIqjj"
      >
        <div
          class="styles__Side-sc-1pwogyu-2 styles__Front-sc-1pwogyu-8 deBIOm"
        >
          <div
            class="styles__Tracer-sc-18vfsm6-0 hNwUQp"
            direction="left"
          />
        </div>
        <div
          class="styles__Side-sc-1pwogyu-2 styles__Back-sc-1pwogyu-3 gCcrQb"
        >
          <div
            class="styles__Tracer-sc-18vfsm6-0 lKbcB"
          />
        </div>
        <div
          class="styles__Side-sc-1pwogyu-2 styles__Top-sc-1pwogyu-6 eLxrDv"
        />
        <div
          class="styles__Side-sc-1pwogyu-2 styles__Bottom-sc-1pwogyu-7 cpagcj"
        >
          <div
            class="styles__Tracer-sc-18vfsm6-0 lKbcB"
          />
        </div>
        <div
          class="styles__Side-sc-1pwogyu-2 styles__Left-sc-1pwogyu-5 iDSTJS"
        >
          <div
            class="styles__Tracer-sc-18vfsm6-0 hNwUQp"
            direction="left"
          />
        </div>
        <div
          class="styles__Side-sc-1pwogyu-2 styles__Right-sc-1pwogyu-4 fTRfub"
        >
          <div
            class="styles__Tracer-sc-18vfsm6-0 lKbcB"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
